update Base64 calss