@@ -1,8 +1,6 @@
 package com.excomm.safety;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
-
+import org.apache.commons.codec.binary.Base64;
 import java.security.Key;
 import java.security.KeyPair;
 import java.security.KeyPairGenerator;
@@ -44,12 +42,13 @@ public class RsaCreateSecrteKey {
 
     //解码返回byte
     public static byte[] decryptBASE64(String key) throws Exception {
-        return (new BASE64Decoder()).decodeBuffer(key);
+        return Base64.decodeBase64(key);
+
     }
 
     //编码返回字符串
     public static String encryptBASE64(byte[] key) throws Exception {
-        return (new BASE64Encoder()).encodeBuffer(key);
+        return Base64.encodeBase64String(key);
     }
 
     //map对象中存放公私钥
